--- a/.github/workflows/devops.yml
+++ b/.github/workflows/devops.yml
@@ -23,10 +23,10 @@ jobs:
         python -m pip install --upgrade pip
         pip install -r requirements.txt
 
+    
     - name: Run Quality Check (Linting)
       run: |
-        # This checks for syntax errors
-        python -m compileall .
+        python -m compileall app.py test_app.py models.py
 
     - name: Run Tests
       run: |
